--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -121,4 +121,15 @@
     }
 }
 
+.error-popup {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    background-color: red;
+    color: while;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 9999;
+}
+
 
